<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.hex-arch-training</groupId>
  <artifactId>hex-thai-star</artifactId>
  <version>${revision}</version>
  <name>hex-thai-star</name>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>11</java.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <revision>1.0.0-SNAPSHOT</revision>
    <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
    <springboot.version>2.5.2</springboot.version>
    <lombok.version>1.18.20</lombok.version>
    <jdbi.version>3.16.0</jdbi.version>
  </properties>

  <modules>
    <module>common/common-domain</module>
    <module>common/common-application</module>
    <module>common/common-adapter-out-jdbi</module>

    <module>booking/booking-domain</module>
    <module>booking/booking-application</module>
    <module>booking/booking-adapter-in-springweb</module>
    <module>booking/booking-adapter-in-quarkusweb</module>
    <module>booking/booking-adapter-in-awslambda</module>
    <module>booking/booking-adapter-out-dynamodb</module>
    <module>booking/booking-adapter-out-jpa</module>
    <module>booking/booking-adapter-out-jdbi</module>

    <module>order/order-domain</module>

    <module>configuration/maven/spring-boot-parent</module>
    <module>configuration/maven/quarkus-parent</module>
    <module>configuration/springboot</module>
    <module>configuration/awslambda</module>
    <module>configuration/quarkus</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.7.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>3.11.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <configuration>
            <java>
              <licenseHeader>
                <file>${basedir}/LICENSE</file>
              </licenseHeader>
              <googleJavaFormat>
                <version>1.7</version>
                <style>GOOGLE</style>
              </googleJavaFormat>
              <removeUnusedImports />
              <importOrder>
                <order>io.github.hexarchtraining,java,javax,org,com,lombok</order>
              </importOrder>
            </java>
          </configuration>
          <executions>
            <execution>
              <id>spotless-check</id>
              <phase>process-test-classes</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
